kubernetes/kaguya.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kaguya
  namespace: eientei
  labels:
    app: kaguya
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kaguya
  template:
    metadata:
      labels:
        app: kaguya
    spec:
      containers:
        - name: kaguya
          image: ghcr.io/oka-tan/kaguya:0.0.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: kaguya-config
              mountPath: "/etc/kaguya.json"
              subPath: "kaguya.json"
          resources:
            requests:
              memory: 32Mi
              cpu: 500m
            limits:
              memory: 128Mi
              cpu: 2
      volumes:
        - name: kaguya-config
          configMap:
            name: kaguya-config
