kubernetes/adminer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: eientei
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: eientei
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: adminer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  namespace: eientei
spec:
  rules:
    - host: "adminer.localhost"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: adminer
              port:
                number: 80
